--- a/Cycle Process Controll/Pattern/View/TimePatternView.xaml
+++ b/Cycle Process Controll/Pattern/View/TimePatternView.xaml
@@ -7,18 +7,23 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="200">
 	<DockPanel>
-		<DockPanel.DataContext>
+		<!--<DockPanel.DataContext>
 			<ViewModel:TimePatternViewModel/>
-		</DockPanel.DataContext>
-		<ComboBox DockPanel.Dock="Bottom" Margin="5" SelectedItem="{Binding Path=SelectedFile,Mode=OneWayToSource}" ItemsSource="{Binding Path=Patterns}"/>
+		</DockPanel.DataContext>-->
+		<TextBlock DockPanel.Dock="Top" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"><Run Text="{Binding Path=Day}" /></TextBlock>
+		<StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+			<Button Width="50px" Command="{Binding Path=Edit}">Edit</Button>
+		</StackPanel>
+		
+		<ComboBox DockPanel.Dock="Bottom" Margin="5" SelectedItem="{Binding Path=SelectedFile,Mode=TwoWay}" ItemsSource="{Binding Path=Patterns}"/>
 		<ListBox Grid.Column="1" ItemsSource="{Binding Path=Pattern, IsAsync=True}" BorderBrush="{x:Null}">
 			<ListBox.ItemTemplate>
 				<DataTemplate>
-					<StackPanel>
-						<TextBlock Text="{Binding Name, Mode=TwoWay}"/>
-						<StackPanel Orientation="Horizontal">
-							<TextBlock><Run Text="Продължителност:"/></TextBlock>
-							<TextBlock Text="{Binding Period, Mode=TwoWay}" Margin="5,0,0,0"/>
+					<StackPanel HorizontalAlignment="Center">
+						<TextBlock Text="{Binding Name, Mode=TwoWay}" HorizontalAlignment="Stretch"/>
+						<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+							<TextBlock ><Run Text="Продължителност:"/></TextBlock>
+							<TextBlock Text="{Binding Period, Mode=TwoWay}" Margin="5,0,0,0" />
 
 						</StackPanel>
 					</StackPanel>
