--- a/Cycle Process Controll/Pattern/View/WeekView.xaml
+++ b/Cycle Process Controll/Pattern/View/WeekView.xaml
@@ -1,8 +1,22 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:View="CycleProcessControll.Pattern.View"  xmlns:local="clr-namespace:CycleProcessControll.Pattern.View"  x:Class="CycleProcessControll.Pattern.View.WeekView"
+        xmlns:View="CycleProcessControll.Pattern.View"  xmlns:local="clr-namespace:CycleProcessControll.Pattern.View"  xmlns:ViewModel="clr-namespace:CycleProcessControll.Pattern.ViewModel"  x:Class="CycleProcessControll.Pattern.View.WeekView"
         Title="Week" Height="600" Width="1200">
+	<Window.DataContext>
+		<ViewModel:WeekViewModel/>
+	</Window.DataContext>
+	<DockPanel LastChildFill="True">
+
+		<DockPanel DockPanel.Dock="Top" Background="#FFCCCCCC">
+			<StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
+				<Button Content="Change" Style="{DynamicResource MenuButton}" Command="{Binding Path=Shit}" Width="57"/>
+
+			</StackPanel>
+
+			<TextBlock DockPanel.Dock="Right" Text="{Binding TimeText, IsAsync=True, Mode=OneWay}"  HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="18.667" TextDecorations="{x:Null}" FontFamily="Arial"/>
+		</DockPanel>
 	<Grid>
+		
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="1*"/>
 			<ColumnDefinition Width="1*"/>
@@ -13,12 +27,14 @@
 			<ColumnDefinition Width="1*"/>
 
 		</Grid.ColumnDefinitions>
-		<local:TimePatternView />
-		<local:TimePatternView Grid.Column="1"/>
-		<local:TimePatternView Grid.Column="2"/>
-		<local:TimePatternView Grid.Column="3"/>
-		<local:TimePatternView Grid.Column="4"/>
-		<local:TimePatternView Grid.Column="5"/>
-		<local:TimePatternView Grid.Column="6"/>
+		<local:TimePatternView DataContext="{Binding Path=Week[0]}" />
+
+		<local:TimePatternView DataContext="{Binding Path=Week[1]}" Grid.Column="1"/>
+		<local:TimePatternView DataContext="{Binding Path=Week[2]}" Grid.Column="2"/>
+		<local:TimePatternView DataContext="{Binding Path=Week[3]}" Grid.Column="3"/>
+		<local:TimePatternView DataContext="{Binding Path=Week[4]}" Grid.Column="4"/>
+		<local:TimePatternView DataContext="{Binding Path=Week[5]}" Grid.Column="5"/>
+		<local:TimePatternView DataContext="{Binding Path=Week[6]}" Grid.Column="6"/>
 	</Grid>
+	</DockPanel>
 </Window>
