--- a/Cycle Process Controll/Pattern/View/WeekView.xaml
+++ b/Cycle Process Controll/Pattern/View/WeekView.xaml
@@ -13,7 +13,7 @@
 
 			</StackPanel>
 
-			<TextBlock DockPanel.Dock="Right" Text="{Binding TimeText, IsAsync=True, Mode=OneWay}"  HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="18.667" TextDecorations="{x:Null}" FontFamily="Arial"/>
+			<TextBlock DockPanel.Dock="Right" Text="{Binding TimeText, Mode=OneWay}"  HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="18.667" TextDecorations="{x:Null}" FontFamily="Arial"/>
 		</DockPanel>
 	<Grid>
 		
