--- a/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
+++ b/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
@@ -1,13 +1,22 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:CycleProcessControll" xmlns:View="clr-namespace:CycleProcessControll.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControll.Pattern.ViewModel" x:Class="CycleProcessControll.Pattern.View.MainWindow"
+        xmlns:local="clr-namespace:CycleProcessControll" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:View="clr-namespace:CycleProcessControll.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControll.Pattern.ViewModel" x:Class="CycleProcessControll.Pattern.View.MainWindow"
         Title="{Binding SaveName}"
 		Width="600px"
 		Height="800px">
 	<Window.DataContext>
 		<ViewModel:StaticPatternViweModel/>
 	</Window.DataContext>
+	<Window.Resources>
+		<ObjectDataProvider MethodName="GetValues"
+                        ObjectType="{x:Type sys:Enum}"
+                        x:Key="AlignmentValues">
+			<ObjectDataProvider.MethodParameters>
+				<x:Type TypeName="HorizontalAlignment" />
+			</ObjectDataProvider.MethodParameters>
+		</ObjectDataProvider>
+	</Window.Resources>
 	<Grid>
 		<DockPanel LastChildFill="True">
 
@@ -43,24 +52,15 @@
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
 						<Label Width="120" Content="Сигнал:"/>
-						<ComboBox  Width="150px">
-							<ComboBoxItem>Само в началото</ComboBoxItem>
-							<ComboBoxItem>Само в края</ComboBoxItem>
-							<ComboBoxItem>През цялото време</ComboBoxItem>
+						<ComboBox  Width="150px" SelectedValuePath="EventStartTime" SelectedValue="{Binding Path=Current.EventStartTime, Mode=TwoWay}">
+							<local:ComboBoxTimeItem EventStartTime="Start">Само в началото</local:ComboBoxTimeItem>
+							<local:ComboBoxTimeItem EventStartTime="End">Само в края</local:ComboBoxTimeItem>
+							<local:ComboBoxTimeItem EventStartTime="All">През цялото време</local:ComboBoxTimeItem>
 						</ComboBox>
 					</StackPanel>
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
 						<Label Width="120" Content="Контрол:"/>
-						<ComboBox  Width="150px">
-							<ComboBox.ItemTemplate>
-								<DataTemplate>
-									<StackPanel Orientation="Horizontal">
-									<CheckBox></CheckBox>
-									<TextBlock></TextBlock>
-									</StackPanel>
-								</DataTemplate>
-							</ComboBox.ItemTemplate>
-						</ComboBox>
+						<TextBox  Width="150px" Text="{Binding Path=Current.EventValue,Mode=TwoWay}"/>
 					</StackPanel>
 					
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
@@ -69,6 +69,7 @@
 						<Button Margin="5" Content="Обнови" Command="{Binding UpdateCommand}"/>
 						<Button Margin="5" Content="Нагоре" Command="{Binding MoveUpCommand}"/>
 						<Button Margin="5" Content="Надолу" Command="{Binding MoveDownCommand}"/>
+						
 					</StackPanel>
 				</StackPanel>
 				<ListBox Grid.Column="1" ItemsSource="{Binding Patern, IsAsync=True}" SelectedItem="{Binding Current, IsAsync=False, Mode=OneWayToSource}" SelectedIndex="{Binding SelectedIndex, IsAsync=False, Mode=TwoWay}" BorderBrush="{x:Null}">
