--- a/Cycle Process Controll/Pattern/View/TimePatternView.xaml
+++ b/Cycle Process Controll/Pattern/View/TimePatternView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ViewModel="clr-namespace:CycleProcessControll.Pattern.ViewModel" x:Class="CycleProcessControll.Pattern.View.TimePatternView" 
+             xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel" x:Class="CycleProcessControl.Pattern.View.TimePatternView" 
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="200">
 	<DockPanel>
