--- a/Cycle Process Controll/Pattern/View/DynamicPatternView.xaml
+++ b/Cycle Process Controll/Pattern/View/DynamicPatternView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CycleProcessControll.Pattern.View.DynaimPatternView"
+﻿<Window x:Class="CycleProcessControl.Pattern.View.DynaimPatternView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="DynaimPatternView" Height="800" Width="1200">
