--- a/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
+++ b/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
@@ -1,13 +1,11 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:CycleProcessControll" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:View="clr-namespace:CycleProcessControll.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControll.Pattern.ViewModel" x:Class="CycleProcessControll.Pattern.View.MainWindow"
+        xmlns:local="clr-namespace:CycleProcessControl" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:View="clr-namespace:CycleProcessControl.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel" x:Class="CycleProcessControl.Pattern.View.MainWindow"
         Title="{Binding SaveName}"
 		Width="600px"
 		Height="800px">
-	<Window.DataContext>
-		<ViewModel:StaticPatternViweModel/>
-	</Window.DataContext>
+
 	<Window.Resources>
 		<ObjectDataProvider MethodName="GetValues"
                         ObjectType="{x:Type sys:Enum}"
