--- a/Cycle Process Controll/Pattern/View/WeekView.xaml
+++ b/Cycle Process Controll/Pattern/View/WeekView.xaml
@@ -1,6 +1,6 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:View="CycleProcessControll.Pattern.View"  xmlns:local="clr-namespace:CycleProcessControll.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControll.Pattern.ViewModel" x:Class="CycleProcessControll.Pattern.View.WeekView"
+        xmlns:View="CycleProcessControl.Pattern.View"  xmlns:local="clr-namespace:CycleProcessControl.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel" x:Class="CycleProcessControl.Pattern.View.WeekView"
         Title="Week" Height="600" Width="1200">
 
 	<Window.DataContext>
@@ -12,16 +12,18 @@
 
 		<DockPanel DockPanel.Dock="Top" Background="#FFCCCCCC">
 			<StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
-					<TextBlock Binding.XmlNamespaceManager="{Binding Path=Current_Element}"/>
-					<Button Content="Добави" Style="{DynamicResource MenuButton}" Command="{Binding Shit}" Width="57"/>
-
-			</StackPanel>
+					<!--<TextBlock Binding.XmlNamespaceManager="{Binding Path=Current_Element}"/>-->
+					<Button Content="Добави" Style="{DynamicResource MenuButton}" Command="{Binding AddPeriod}" Width="57"/>
+                    <Button Content="Настройки" Style="{DynamicResource MenuButton}" Command="{Binding Settings}" Width="60"/>
+                </StackPanel>
 
 			<TextBlock DockPanel.Dock="Right" Text="{Binding TimeText, Mode=OneWay}"  HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="18.667" TextDecorations="{x:Null}" FontFamily="Arial"/>
 		</DockPanel>
+            
 			<StackPanel Height="22px" DockPanel.Dock="Bottom" Background="#FFCCCCCC" >
 				<TextBlock Text="{Binding Path=PatternName}"/>
 			</StackPanel>
+            <Rectangle Width="20"  DockPanel.Dock="Left" Height="100" VerticalAlignment="Top" Fill="#96FF0000" Margin="0,0,5,0"/>
 			<Grid>
 
 			<Grid.ColumnDefinitions>
