Fixed the timer bug

--- a/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
+++ b/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
@@ -15,7 +15,10 @@
 			</ObjectDataProvider.MethodParameters>
 		</ObjectDataProvider>
 	</Window.Resources>
-	<Grid>
+    <Window.DataContext>
+        <ViewModel:StaticPatternViewModel/>
+    </Window.DataContext>
+    <Grid>
 		<DockPanel LastChildFill="True">
 
 			<DockPanel DockPanel.Dock="Top" Background="#FFCCCCCC">
