--- a/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
+++ b/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
@@ -1,9 +1,9 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:CycleProcessControl" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:View="clr-namespace:CycleProcessControl.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel" x:Class="CycleProcessControl.Pattern.View.MainWindow"
+        xmlns:local="clr-namespace:CycleProcessControl" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:View="clr-namespace:CycleProcessControl.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel" x:Class="CycleProcessControl.Pattern.View.StaticPaternView"
         Title="{Binding SaveName}"
-		Width="600px"
+		Width="700px"
 		Height="800px">
 
 	<Window.Resources>
@@ -70,8 +70,8 @@
 						<Button Margin="5" Content="Обнови" Command="{Binding UpdateCommand}"/>
 						<Button Margin="5" Content="Нагоре" Command="{Binding MoveUpCommand}"/>
 						<Button Margin="5" Content="Надолу" Command="{Binding MoveDownCommand}"/>
-						
-					</StackPanel>
+                        <Button Margin="5" Content="Копие" Command="{Binding MoveDownCommand}"/>
+                    </StackPanel>
 				</StackPanel>
 				<ListBox Grid.Column="1" ItemsSource="{Binding Patern, IsAsync=True}" SelectedItem="{Binding Current, IsAsync=False, Mode=OneWayToSource}" SelectedIndex="{Binding SelectedIndex, IsAsync=False, Mode=TwoWay}" BorderBrush="{x:Null}">
 					<ListBox.ItemTemplate>
