--- a/Cycle Process Controll/Pattern/View/WeekView.xaml
+++ b/Cycle Process Controll/Pattern/View/WeekView.xaml
@@ -2,9 +2,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:View="CycleProcessControl.Pattern.View"  xmlns:local="clr-namespace:CycleProcessControl.Pattern.View" xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel" x:Class="CycleProcessControl.Pattern.View.WeekView"
         Title="Week" Height="600" Width="1200">
+    <Window.DataContext>
+        <ViewModel:WeekViewModel/>
+    </Window.DataContext>
 
-	
-	<Grid>
+
+    <Grid>
  
         <DockPanel LastChildFill="True">
 
