--- a/Cycle Process Controll/Pattern/View/DeviceChooseView.xaml
+++ b/Cycle Process Controll/Pattern/View/DeviceChooseView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CycleProcessControl.Pattern.View.DeviceChoose"
+﻿<Window xmlns:local="clr-namespace:CycleProcessControl"  x:Class="CycleProcessControl.Pattern.View.DeviceChoose"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ProtocollChoose" Height="400" Width="600
@@ -32,7 +32,29 @@
                     <Label Width="80" Content="Име:"/>
                     <TextBox Text="{Binding Current.Name, Mode=TwoWay}" Width="150px"/>
                 </StackPanel>
-
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                    <Label Width="80" Content="Тип:"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                        <Label Width="80" Content="Порт:"/>
+                        <ComboBox  Width="150px" SelectedIndex="0">
+                            
+                            
+                        </ComboBox>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                    <Label Width="80" Content="Порт:"/>
+                    <ComboBox  Width="150px" SelectedIndex="0">
+                        <ComboBoxItem>1</ComboBoxItem>
+                        <ComboBoxItem>2</ComboBoxItem>
+                        <ComboBoxItem>3</ComboBoxItem>
+                        <ComboBoxItem>4</ComboBoxItem>
+                        <ComboBoxItem>5</ComboBoxItem>
+                        <ComboBoxItem>6</ComboBoxItem>
+                        <ComboBoxItem>7</ComboBoxItem>
+                        <ComboBoxItem>8</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
             </StackPanel>
             
             <ListBox Grid.Column="1">
