--- a/Cycle Process Controll/Pattern/View/DeviceChooseView.xaml
+++ b/Cycle Process Controll/Pattern/View/DeviceChooseView.xaml
@@ -1,24 +1,30 @@
-﻿<Window xmlns:local="clr-namespace:CycleProcessControl"  x:Class="CycleProcessControl.Pattern.View.DeviceChoose"
+﻿<Window xmlns:local="clr-namespace:CycleProcessControl"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ProtocollChoose" Height="400" Width="600
-        ">
+        xmlns:ViewModel="clr-namespace:CycleProcessControl.Pattern.ViewModel"  x:Class="CycleProcessControl.Pattern.View.DeviceChoose"
+        Title="ProtocollChoose" Height="400" Width="600         ">
+
+    <Window.DataContext>
+        <ViewModel:DeviceChooseViewModel/>
+    </Window.DataContext>
+
     <DockPanel LastChildFill="True">
 
         <DockPanel DockPanel.Dock="Top" Background="#FFCCCCCC">
             <StackPanel Height="21" DockPanel.Dock="Left" Orientation="Horizontal">
-                
-                <Button Content="Добави" Style="{DynamicResource MenuButton}" Command="{Binding AddPeriod}" Width="57"/>
-                <Button Content="Изтрий" Style="{DynamicResource MenuButton}" Command="{Binding Settings}" Width="57"/>
+
+                <Button Content="Добави" Style="{DynamicResource MenuButton}" Command="{Binding AddCommand}" Width="57"/>
+                <Button Content="Изтрий" Style="{DynamicResource MenuButton}" Command="{Binding RemoveCommand}" Width="57"/>
+                <Button Content="Съхрани" Style="{DynamicResource MenuButton}" Command="{Binding SaveCommand}" Width="57"/>
             </StackPanel>
 
-            
+
         </DockPanel>
 
-       
-        
+
+
         <StackPanel Height="22px" DockPanel.Dock="Bottom" Background="#FFCCCCCC" >
-            <TextBlock Text="{Binding Path=PatternName}"/>
+            
         </StackPanel>
 
         <Grid>
@@ -26,39 +32,52 @@
                 <ColumnDefinition Width="25*"/>
                 <ColumnDefinition Width="30*"/>
             </Grid.ColumnDefinitions>
-            
+
             <StackPanel Grid.Column="0">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                     <Label Width="80" Content="Име:"/>
                     <TextBox Text="{Binding Current.Name, Mode=TwoWay}" Width="150px"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
-                    <Label Width="80" Content="Тип:"/>
+
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
-                        <Label Width="80" Content="Порт:"/>
-                        <ComboBox  Width="150px" SelectedIndex="0">
-                            
-                            
+                        <Label Width="80" Content="Тип:"/>
+                        <ComboBox  Width="150px" SelectedValuePath="PortType" SelectedValue="{Binding Current.PortType, Mode=TwoWay}">
+                            <local:ComboBoxPortTypeItem Content="USB" PortType="USB"/>
+                            <local:ComboBoxPortTypeItem Content="LPT" PortType="LPT"/>
+
                         </ComboBox>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
-                    <Label Width="80" Content="Порт:"/>
-                    <ComboBox  Width="150px" SelectedIndex="0">
-                        <ComboBoxItem>1</ComboBoxItem>
-                        <ComboBoxItem>2</ComboBoxItem>
-                        <ComboBoxItem>3</ComboBoxItem>
-                        <ComboBoxItem>4</ComboBoxItem>
-                        <ComboBoxItem>5</ComboBoxItem>
-                        <ComboBoxItem>6</ComboBoxItem>
-                        <ComboBoxItem>7</ComboBoxItem>
-                        <ComboBoxItem>8</ComboBoxItem>
+                    <Label Width="80" Content="Устройство:"/>
+                    <ComboBox  Width="150px" SelectedValuePath="Content" SelectedValue="{Binding Current.Value}">
+                        <ComboBoxItem Content="1"/>
+                        <ComboBoxItem Content="2"/>
+                        <ComboBoxItem Content="3"/>
+                        <ComboBoxItem Content="4"/>
+                        <ComboBoxItem Content="5"/>
+                        <ComboBoxItem Content="6"/>
+                        <ComboBoxItem Content="7"/>
+                        <ComboBoxItem Content="8"/>
                     </ComboBox>
                 </StackPanel>
             </StackPanel>
-            
-            <ListBox Grid.Column="1">
-                
+
+            <ListBox Grid.Column="1" ItemsSource="{Binding Path=Devices}" SelectedItem="{Binding Path=Current}" SelectedIndex="{Binding Selected}" BorderBrush="{x:Null}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+
+                        <StackPanel HorizontalAlignment="Stretch">
+                            <TextBlock Text="{Binding Name, Mode=OneWay}" HorizontalAlignment="Stretch"/>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                                <TextBlock Text="Порт:" />
+                                <TextBlock Text="{Binding PortType, Mode=OneWay}" Margin="5,0,0,0" />
+                            </StackPanel>
+                        </StackPanel>
+
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
             </ListBox>
 
         </Grid>
