--- a/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
+++ b/Cycle Process Controll/Pattern/View/StaticPaternView.xaml
@@ -53,6 +53,10 @@
                         <TextBox Text="{Binding Current.Period, Mode=TwoWay}" Width="150px"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                        <Label Width="140" Content="Период на работа:"/>
+                        <TextBox Text="{Binding Current.WorkPeriod, Mode=TwoWay}" Width="150px"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                         <Label Width="140" Content="Сигнал:"/>
                         <ComboBox  Width="150px" SelectedValuePath="EventStartTime" SelectedValue="{Binding Path=Current.EventStartTime, Mode=TwoWay}">
                             <local:ComboBoxTimeItem EventStartTime="Start">Само в началото</local:ComboBoxTimeItem>
@@ -73,7 +77,7 @@
                         <Button Margin="5" Content="Обнови" Command="{Binding UpdateCommand}"/>
                         <Button Margin="5" Content="Нагоре" Command="{Binding MoveUpCommand}"/>
                         <Button Margin="5" Content="Надолу" Command="{Binding MoveDownCommand}"/>
-                        <Button Margin="5" Content="Копие" Command="{Binding MoveDownCommand}"/>
+                        <Button Margin="5" Content="Копие" Command="{Binding CopyCommand}"/>
                     </StackPanel>
                 </StackPanel>
                 <ListBox Grid.Column="1" ItemsSource="{Binding Patern, IsAsync=True}" SelectedItem="{Binding Current, IsAsync=False, Mode=OneWayToSource}" SelectedIndex="{Binding SelectedIndex, IsAsync=False, Mode=TwoWay}" BorderBrush="{x:Null}" Grid.ColumnSpan="2">
